--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "easy-enums": "^1.1.7",
     "easyi18n": "^1.1.1",
@@ -29,13 +28,7 @@
     "react-stripe-elements": "^2.0.3",
     "reactstrap": "^8.4.1",
     "sjtest": "^0.4.9",
-    "you-again": "^0.8.8",
-    "jest": "^25.1.0",
-    "shelljs": "^0.8.3",
-    "yargs": "^15.1.0",
-    "jest-puppeteer": "^4.4.0",
-    "puppeteer": "^2.0.0",
-    "puppet-theatre": "latest"
+    "you-again": "^0.8.8"
   },
   "scripts": {
     "compile": "webpack --config $PWD/webpack.config.js --progress --colors && ./gitstamp.sh",
@@ -48,8 +41,6 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "babel-plugin-transform-node-env-inline": "0.4.3",
-    "css-loader": "^3.5.3",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
     "@babel/plugin-transform-typescript": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
@@ -65,6 +56,7 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-const-enum": "^1.0.1",
+    "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -78,7 +70,6 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "ndb": "^1.1.5",
     "puppeteer": "^3.0.0",
     "shelljs": "^0.8.3",
     "typescript": "^3.8.3",
