--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-autocomplete": "^1.8.1",
     "react-chartjs2": "^1.2.1",
     "react-dom": "^16.13.1",
-    "react-dropzone": "4.3.0",
+    "react-dropzone": "^11.0.1",
     "react-markdown": "^4.3.1",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.3",
