--- a/.classpath
+++ b/.classpath
@@ -23,6 +23,7 @@
 	<classpathentry kind="lib" path="dependencies/stripe-java.jar" sourcepath="dependencies/stripe-java-17.8.0.zip"/>
 	<classpathentry kind="lib" path="dependencies/lombok.jar"/>
 	<classpathentry kind="lib" path="dependencies/mockito-core.jar"/>
+	<classpathentry kind="lib" path="dependencies/opencsv.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
