--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
   },
   "license": "MIT",
   "dependencies": {
-    "chart.js": "^2.8.0",
-    "easy-enums": "^1.1.7",
+    "chart.js": "^2.9.3",
+    "easy-enums": "^1.1.7",	
     "easyi18n": "^1.1.1",
+	"fast-json-patch": "^3.0.0-1",
     "hashmap": "^2.4.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "md5": "^2.2.1",
     "node-fetch": "^2.6.1",
-    "promise-value": "^1.2.8",
+    "promise-value": "^1.2.9",
     "react": "^16.13.1",
     "react-autocomplete": "^1.8.1",
     "react-chartjs2": "^1.2.1",
@@ -27,7 +28,7 @@
     "react-markdown": "^4.3.1",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^2.0.3",
-    "reactstrap": "^8.4.1",
+    "reactstrap": "^8.5.1",
     "sjtest": "^0.4.9",
     "you-again": "^0.8.8"
   },
@@ -39,43 +40,43 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/plugin-transform-react-jsx": "^7.9.4",
-    "@babel/plugin-transform-typescript": "^7.9.6",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
-    "@types/react": "^16.9.22",
-    "@types/react-dom": "^16.9.5",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@babel/plugin-transform-typescript": "^7.10.4",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.6",
     "@types/reactstrap": "^8.4.2",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-const-enum": "^1.0.1",
     "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^3.0.0",
     "intl": "^1.2.5",
     "jest": "^26.1.0",
-    "jest-environment-puppeteer": "^4.3.0",
+    "jest-environment-puppeteer": "^4.4.0",
     "jest-puppeteer": "^4.4.0",
-    "less": "^3.11.1",
+    "less": "^3.11.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "puppeteer": "^4.0.1",
-    "shelljs": "^0.8.3",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
+    "shelljs": "^0.8.4",
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
     "yargs": "^15.3.1"
   },
   "jest": {
