Remove some things which should not have been committed.

--- a/config/baker.properties
+++ b/config/baker.properties
@@ -1,16 +1,2 @@
-twitter.consumerKey=Xy9AlfTpS7juv0KQg83vPrOQ6
-twitter.consumerSecret=ek92E2snmK5Q1PnpefusHdPGfSfm6xaDOt7OmblUaJ4bjWr46g
-
-# Stripe
-testSecretKey=sk_test_p6Od3rCNyCwEVdwkgRGsXeDm
-testPubKey=pk_test_RyG0ezFZmvNSP5CWjpl5JQnd
-secretKey=sk_live_7KaajQp5r9zjednjOBY53VjR
-pubKey=pk_live_InKkluBNjhUO4XN1QAkCPEGY
+# Stripe - temporarily force live-mode key
 testStripe=false
-
-# email
-emailServer=smtp.gmail.com
-emailFrom=No-Reply@sogive.org
-emailPassword=m15sedLoB5!
-emailPort=465
-emailSSL=true
