--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-markdown": "^4.3.1",
+    "react-minimal-pie-chart": "^8.1.0",
     "reactstrap": "^8.5.1",
     "sjtest": "^0.4.9"
   },
