--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "less": "^3.11.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "puppeteer": "^4.0.1",
+    "puppeteer": "2.1.1",
     "shelljs": "^0.8.4",
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
