Add react minimal pie chart package to package.json

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
     "react-markdown": "^6.0.0",
+    "react-minimal-pie-chart": "^8.2.0",
     "reactstrap": "^8.9.0",
     "remark-gfm": "^1.0.0"
   },
