--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-chartjs2": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
+    "react-faq-component": "^1.3.1",
     "react-markdown": "^6.0.0",
     "react-minimal-pie-chart": "^8.2.0",
     "reactstrap": "^8.9.0",
