--- a/config/baker.properties
+++ b/config/baker.properties
@@ -1,2 +1,2 @@
-# Stripe - temporarily force live-mode key
-testStripe=false
+# Stripe - uncomment to temporarily force live-mode key
+# testStripe=false
