Bring webpack config into line with latest template & update various packages

--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "md5": "^2.3.0",
     "node-fetch": "^2.6.1",
     "promise-value": "^1.2.15",
-    "react": "^16.13.1",
     "react-autocomplete": "^1.8.1",
     "react-chartjs2": "^1.2.1",
-    "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
     "react-faq-component": "^1.3.1",
     "react-markdown": "^6.0.0",
@@ -35,9 +33,9 @@
     "remark-gfm": "^1.0.0"
   },
   "scripts": {
-    "compile": "webpack --config $PWD/webpack.config.js --progress --colors && ./gitstamp.sh",
-    "compile-watch": "webpack --config $PWD/webpack.config.js --progress --colors --watch",
-    "compile-watch-fast": "NO_PROD=true webpack --config $PWD/webpack.config.js --progress --colors --watch",
+    "compile": "webpack --config $PWD/webpack.config.js --progress --color && ./gitstamp.sh",
+    "compile-watch": "webpack --config $PWD/webpack.config.js --progress --color --watch",
+    "compile-watch-fast": "NO_PROD=true webpack --config $PWD/webpack.config.js --progress --color --watch",
     "test": "jest",
     "type-check": "tsc --noEmit"
   },
@@ -51,34 +49,36 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.6",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "@types/reactstrap": "^8.5.1",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-const-enum": "^1.0.1",
-    "css-loader": "^3.6.0",
-    "eslint": "^6.0.0",
-    "eslint-config-airbnb": "^18.2.0",
+    "css-loader": "^6.5.1",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^3.0.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "intl": "^1.2.5",
     "jest": "^26.1.0",
     "jest-environment-puppeteer": "^4.4.0",
     "jest-puppeteer": "^4.4.0",
-    "less": "^3.12.2",
-    "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "puppeteer": "^2.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "shelljs": "^0.8.4",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "typescript": "^4.5.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
     "yargs": "^15.4.1"
   },
   "jest": {
