--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "data-pivot": "^1.0.2",
     "easy-enums": "^1.1.8",
     "easyi18n": "^1.1.1",
+    "express": "^4.17.2",
     "fast-json-patch": "^3.0.0-1",
     "hashmap": "^2.4.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "md5": "^2.3.0",
+    "memory-fs": "^0.5.0",
     "node-fetch": "^2.6.1",
     "promise-value": "^1.2.15",
     "react": "^16.13.1",
@@ -32,24 +34,26 @@
     "react-markdown": "^6.0.0",
     "react-minimal-pie-chart": "^8.2.0",
     "reactstrap": "^8.9.0",
-    "remark-gfm": "^1.0.0"
+    "remark-gfm": "^1.0.0",
+    "require-from-string": "^2.0.2"
   },
   "scripts": {
     "compile": "webpack --config $PWD/webpack.config.js --progress --colors && ./gitstamp.sh",
     "compile-watch": "webpack --config $PWD/webpack.config.js --progress --colors --watch",
     "compile-watch-fast": "NO_PROD=true webpack --config $PWD/webpack.config.js --progress --colors --watch",
     "test": "jest",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "ssr": "NODE_ENV=production node ./server.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.16.7",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/plugin-transform-typescript": "^7.11.0",
     "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.10.4",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.6",
@@ -58,8 +62,10 @@
     "@typescript-eslint/parser": "^2.34.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.3",
     "babel-plugin-const-enum": "^1.0.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^3.6.0",
     "eslint": "^6.0.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -79,6 +85,7 @@
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
+    "webpack-node-externals": "^3.0.0",
     "yargs": "^15.4.1"
   },
   "jest": {
