meld-package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SoGive",
-  "version": "0.5.8",
+  "version": "0.5.9",
   "description": "Charity app",
   "author": "Daniel Winterstein",
   "repository": {
@@ -11,25 +11,27 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.3.2",
     "data-pivot": "^1.0.2",
     "easy-enums": "^1.1.8",
     "easyi18n": "^1.1.1",
     "fast-json-patch": "^3.0.0-1",
     "hashmap": "^2.4.0",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "node-fetch": "^2.6.1",
     "promise-value": "^1.2.15",
+    "react": "^16.13.1",
     "react-autocomplete": "^1.8.1",
     "react-chartjs2": "^1.2.1",
-    "react-dropzone": "^11.1.0",
+    "react-dom": "^16.13.1",
+    "react-dropzone": "^11.4.2",
     "react-faq-component": "^1.3.1",
     "react-markdown": "^6.0.0",
     "react-minimal-pie-chart": "^8.2.0",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^8.10.1",
     "remark-gfm": "^1.0.0"
   },
   "scripts": {
@@ -40,46 +42,49 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/plugin-transform-typescript": "^7.11.0",
     "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/reactstrap": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-const-enum": "^1.0.1",
+    "babel-jest": "^27.0.2",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-const-enum": "^1.2.0",
+    "core-js": "^3.19.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.4.1",
     "eslint-config-airbnb": "^19.0.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsdoc": "^30.6.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "intl": "^1.2.5",
-    "jest": "^26.1.0",
-    "jest-environment-puppeteer": "^4.4.0",
-    "jest-puppeteer": "^4.4.0",
+    "jest": "^27.0.4",
+    "jest-environment-puppeteer": "^5.0.4",
+    "jest-puppeteer": "^5.0.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "mini-css-extract-plugin": "^2.4.5",
     "puppeteer": "^2.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "querystring-es3": "^0.2.1",
+    "regenerator-runtime": "^0.13.7",
     "shelljs": "^0.8.4",
     "typescript": "^4.5.2",
+    "util": "^0.12.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "yargs": "^15.4.1"
+    "yargs": "^17.0.1"
   },
   "jest": {
     "preset": "jest-puppeteer",
