--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "data-pivot": "^1.0.2",
     "easy-enums": "^1.1.8",
     "easyi18n": "^1.1.1",
-    "fast-json-patch": "^3.0.0-1",
+    "fast-json-patch": "^3.1.0",
     "hashmap": "^2.4.0",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
@@ -23,13 +23,13 @@
     "md5": "^2.3.0",
     "node-fetch": "^2.6.1",
     "promise-value": "^1.2.15",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-autocomplete": "^1.8.1",
     "react-chartjs2": "^1.2.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-faq-component": "^1.3.1",
-    "react-markdown": "^6.0.0",
+    "react-markdown": "^6.0.3",
     "react-minimal-pie-chart": "^8.2.0",
     "reactstrap": "^8.10.1",
     "remark-gfm": "^1.0.0"
@@ -43,10 +43,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-transform-react-jsx": "^7.10.4",
-    "@babel/plugin-transform-typescript": "^7.11.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.5",
+    "@babel/plugin-transform-typescript": "^7.16.1",
     "@babel/polyfill": "^7.11.5",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
@@ -64,6 +65,7 @@
     "css-loader": "^6.5.1",
     "eslint": "^8.4.1",
     "eslint-config-airbnb": "^19.0.2",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsdoc": "^30.6.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
