--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/reactstrap": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.5.4",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-const-enum": "^1.2.0",
@@ -86,6 +86,7 @@
     "util": "^0.12.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
+    "rehype-raw": "^6.1.1",
     "yargs": "^17.0.1"
   },
   "jest": {
