--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "node-fetch": "^2.6.1",
+    "prismjs": "^1.29.0",
     "promise-value": "^1.2.15",
     "react": "^17.0.2",
     "react-autocomplete": "^1.8.1",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.5.4",
     "@babel/plugin-proposal-class-properties": "^7.16.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
     "@babel/plugin-transform-react-jsx": "^7.16.0",
@@ -57,7 +59,6 @@
     "@types/reactstrap": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "@babel/eslint-parser": "^7.5.4",
     "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-const-enum": "^1.2.0",
@@ -82,12 +83,12 @@
     "puppeteer": "^2.0.0",
     "querystring-es3": "^0.2.1",
     "regenerator-runtime": "^0.13.7",
+    "rehype-raw": "^6.1.1",
     "shelljs": "^0.8.4",
     "typescript": "^4.5.2",
     "util": "^0.12.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "rehype-raw": "^6.1.1",
     "yargs": "^17.0.1"
   },
   "jest": {
