--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stripe/stripe-js": "^1.11.0",
     "chart.js": "^3.3.2",
     "data-pivot": "^1.0.2",
+    "dayjs-with-plugins": "^1.0.3",
     "easy-enums": "^1.1.8",
     "easyi18n": "^1.1.1",
     "fast-json-patch": "^3.1.0",
