--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.16.5",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
     "chart.js": "^3.3.2",
@@ -25,17 +26,17 @@
     "md5": "^2.3.0",
     "node-fetch": "^2.6.1",
     "prismjs": "^1.29.0",
-    "promise-value": "^1.2.15",
     "react": "^17.0.2",
     "react-autocomplete": "^1.8.1",
     "react-chartjs2": "^1.2.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-faq-component": "^1.3.1",
-    "react-markdown": "^6.0.3",
+    "react-markdown": "^8.0.3",
     "react-minimal-pie-chart": "^8.2.0",
     "reactstrap": "^8.10.1",
-    "remark-gfm": "^1.0.0"
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1"
   },
   "scripts": {
     "compile": "webpack --config $PWD/webpack.config.js --progress --color && ./gitstamp.sh",
@@ -45,8 +46,8 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/eslint-parser": "^7.5.4",
+    "@babel/core": "^7.20.7",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.16.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
     "@babel/plugin-transform-react-jsx": "^7.16.0",
@@ -61,7 +62,6 @@
     "@types/reactstrap": "^8.5.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-const-enum": "^1.2.0",
     "core-js": "^3.19.3",
@@ -70,17 +70,16 @@
     "eslint-config-airbnb": "^19.0.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsdoc": "^30.6.1",
+    "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "intl": "^1.2.5",
-    "jest": "^27.0.4",
-    "jest-environment-puppeteer": "^5.0.4",
-    "jest-puppeteer": "^5.0.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "node-fetch": "^2.6.6",
+    "playwright": "^1.33.0",
     "prismjs": "^1.29.0",
     "puppeteer": "^2.0.0",
     "querystring-es3": "^0.2.1",
@@ -92,11 +91,5 @@
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "yargs": "^17.0.1"
-  },
-  "jest": {
-    "preset": "jest-puppeteer",
-    "globals": {
-      "window": {}
-    }
   }
 }
