--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
 	"@babel/plugin-proposal-private-methods": "^7.18.6",
+	"@babel/plugin-proposal-private-property-in-object":"^7.21.11",
     "@babel/plugin-transform-react-jsx": "^7.22.15",
     "@babel/plugin-transform-runtime": "^7.22.15",
     "@babel/plugin-transform-typescript": "^7.22.15",
