--- a/.classpath
+++ b/.classpath
@@ -1,32 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="test/java"/>
-	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="src" path="builder"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/elasticsearch-java-client"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.bob"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.datalog"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.utils"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.web"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/flexi-gson"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.webappbase"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/youagain-java-client"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.depot"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/winterwell.maths"/>
-	<classpathentry kind="src" path="target/generated-sources/annotations">
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="dependencies/gson.jar"/>
-	<classpathentry kind="lib" path="dependencies/stripe-java.jar" sourcepath="dependencies/stripe-java-17.8.0.zip"/>
-	<classpathentry kind="lib" path="dependencies/mockito-core.jar"/>
-	<classpathentry kind="lib" path="dependencies/jsoup.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/classes" path="src/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
+		<attributes>
+			<attribute name="test" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/winterwell.maths"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/winterwell.datalog"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
