mvn-systemd-etc

--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
                             </descriptorRefs>
                             <archive>
                                 <manifest>
-                                    <mainClass>aiqa.AIQAMain</mainClass>
+                                    <mainClass>org.sogive.server.SoGiveMain</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
