--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
       <version>0.0.1-SNAPSHOT</version>
     </dependency>
 
-	<dependency><groupId>good-loop.com</groupId>
+	<dependency><groupId>winterwell.com</groupId>
   <artifactId>winterwell.utils</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
 </dependency>
     <dependency>
       <groupId>good-loop.com</groupId>
